--- a/src/Component/Hero/Hero.scss
+++ b/src/Component/Hero/Hero.scss
@@ -1,88 +1,147 @@
 @import "../../Style/Common.scss";
 
-.hero{
-    margin-top: -38px;
-   @include md{
-    margin-top: -144px;
-   }
-    .row{
-        margin: 0;
-        .col{
-            padding: 0;
-        }
-        .col-8{
-            background-color: $primery-color;
-            .hero_ct{
-                max-width: 664px;
-                width: 100%;
-                margin: 0 auto;
-                padding: 0px 16px;
-                .hero-content{
-                    padding: 266px 0px;
-                    @include sm{
-                        padding: 200px 0px;
-                    }
-                    @include xsm{
-                        padding: 200px 0px 50px 0px;
-                    }
-                    .hero_h3{
-                        max-width: 510px;
-                        margin-bottom: 20px;
-                        @include sm{
-                            margin-bottom: 10px;
-                            font-size: 16px;
-                            line-height: 22px;
-                        }
-                    }
-                    .hero_h6{
-                        max-width: 440px;
-                        margin-bottom: 40px;
-                        @include sm{
-                            margin-bottom: 20px;
-                            @include sm{
-                                margin-bottom: 20px;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-        .shape{
-            position: relative;
-            &::after{
-                content: '';
-                position: absolute;
-                background-image: url(../../Assets/Images/Heroshape.svg);
-                background-position: center;
-                background-repeat: no-repeat;
-                width: 577px;
-                height: 100%;
-                top: 0px;
-                right: -120px;
-                bottom: 0px;
-                z-index: 5;
-            }
-        }
-        .col-4{
-            background-color: $white;
-            .row{
-                display: flex;
-                flex-direction: column;
-                height: 100%;
-                .col{
-                    padding: 0;
-                    width: 100%;
-                }
-                .col-8{
-                    background-color: $secondary-color;
-                   height: 60%;
-                }
-                .col-4{
-                    background-color: $bg-first;
-                    height: 40%;
-                }
-            }
-        }
-        
+.hero {
+  overflow: hidden;
+  .Hero_wrapper {
+    background-color: $primary-color;
+    height: 990px;
+    position: relative;
+    @include lg{
+      height: 700px;
     }
+    @include md{
+      height: 600px;
+    }
+    @include xsm{
+      height: 500px;
+    }
+    .secondery_bg {
+      background-color: $secondary-color;
+      height: 630px;
+      width: 540px;
+      position: absolute;
+      right: 0;
+      top: 0;
+      @include md{
+        height: 300px;
+        width: 300px;
+      }
+      @include xsm{
+        height: 250px;
+        width: 200px;
+      }
+      @include xxsm{
+        width: 100px;
+      }
+    }
+    .dark_bg {
+      background-color: $white-100;
+      height: 360px;
+      width: 540px;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      @include md{
+        height: 300px;
+        width: 300px;
+      }
+      @include xsm{
+        height: 250px;
+        width: 200px;
+      }
+      @include xxsm{
+        width: 100px;
+      }
+    }
+    .shape_first{
+      position: absolute;
+        background-image: url(../../Assets/Images/Heroshape.svg);
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 577px;
+        height: 100%;
+        top: 45px;
+        right: -237px;
+        bottom: 22px;
+        z-index: 5;
+        @include lg{
+          top: 0;
+          bottom: 0;
+        }
+        @include sm{
+          right: -50px;
+        }
+        @include xsm{
+          right: 0px;
+         }
+    }
+    .shape_second{
+        position: absolute;
+        background-image: url(../../Assets/Images/Heroshape.svg);
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 577px;
+        height: 100%;
+        top: 45px;
+        right: 91.12px;
+        bottom: 22px;
+        z-index: 5;
+        @include lg{
+          top: 0;
+          bottom: 0;
+        }
+        // @include sm{
+        //   right: ;
+        // }
+    }
+    .shape_third{
+      position: absolute;
+        background-image: url(../../Assets/Images/Heroshape.svg);
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 577px;
+        height: 100%;
+        top: 45px;
+        right: 419.87px;
+        bottom: 22px;
+        z-index: 5;
+        @include lg{
+          top: 0;
+          bottom: 0;
+        }
+        @include sm{
+         right: 200px;
+        }
+    }
+    .hero-content { 
+      position: absolute;
+      top: 200px;
+      z-index: 5;
+      @include sm{
+        top: 150px;
+      }
+      .hero_h3 {
+        max-width: 510px;
+        margin-bottom: 20px;
+        @include sm {
+          margin-bottom: 10px;
+          font-size: 16px;
+          line-height: 22px;
+        }
+      }
+      .hero_h6 {
+        max-width: 440px;
+        margin-bottom: 40px;
+        @include sm {
+          margin-bottom: 20px;
+          @include sm {
+            margin-bottom: 20px;
+          }
+        }
+      }
+      .hero_btn {
+        text-align: start;
+      }
+    }
+  }
 }
