--- a/src/Component/Skybutton/Skybutton.scss
+++ b/src/Component/Skybutton/Skybutton.scss
@@ -1,30 +1,29 @@
 @import "../../Style/Common.scss";
 
-.skybtn{
-    text-align: start;
-    .btns{
-        font-family: $urb-600rg;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 26px;
-        text-align: center;
-        letter-spacing: 0.05em;
-        text-transform: uppercase;
-        color: $primery-color;
-        padding: 8px 50px;
-        border: 1px solid $primery-color;
-        border-radius: 0px;
-        transition: all 0.4s;
-        background-color: $secondary-color;
-        &:hover{
-            background-color: $bg-first;
-            color: $primery-color;
-        }
-        @include sm{
-            padding: 5px 25px;
-            font-size: 14px;
-            line-height: 20px;
-        }
+.skybtn {
+  .btns {
+    font-family: $urb-600rg;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: $primary-color;
+    padding: 8px 50px;
+    border: 1px solid $primary-color;
+    border-radius: 0px;
+    transition: all 0.4s;
+    background-color: $secondary-color;
+    &:hover {
+      background-color: $white-100;
+      color: $primary-color;
     }
+    @include sm {
+      padding: 5px 25px;
+      font-size: 14px;
+      line-height: 20px;
+    }
+  }
 }
