--- a/src/Style/Common.scss
+++ b/src/Style/Common.scss
@@ -1,138 +1,167 @@
 @import "./variable.scss";
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    line-height: normal;
+body {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
 }
 
-.container{
-    max-width: 1312px;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0px 16px;
-}
-ul,li,a,p,h1,h2,h3,h4,h5,h6{
-    margin: 0;
-    padding: 0;
-    text-align: start;
+.container {
+  max-width: 1312px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0px 16px;
 }
 
-a{
-    text-decoration: none;
+
+ul,
+li,
+a,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+  text-align: start;
 }
 
+a {
+  text-decoration: none;
+}
 
 // fonts
 
 @font-face {
-    font-family: 'Urbanist-Regular';
-    src: url(../Assets/Fonts/Urbanist-Regular.ttf);
+  font-family: "Urbanist-Regular";
+  src: url(../Assets/Fonts/Urbanist-Regular.ttf);
 }
 
 @font-face {
-    font-family: 'Urbanist-Medium';
-    src: url(../Assets/Fonts/Urbanist-Medium.ttf);
+  font-family: "Urbanist-Medium";
+  src: url(../Assets/Fonts/Urbanist-Medium.ttf);
 }
 
 @font-face {
-    font-family: 'Urbanist-MediumItalic';
-    src: url(../Assets/Fonts/Urbanist-MediumItalic.ttf);
+  font-family: "Urbanist-MediumItalic";
+  src: url(../Assets/Fonts/Urbanist-MediumItalic.ttf);
 }
 
 @font-face {
-    font-family: 'Urbanist-SemiBold';
-    src: url(../Assets/Fonts/Urbanist-SemiBold.ttf);
+  font-family: "Urbanist-SemiBold";
+  src: url(../Assets/Fonts/Urbanist-SemiBold.ttf);
 }
 
 @font-face {
-    font-family: 'Urbanist-SemiBoldItalic';
-    src: url(../Assets/Fonts/Urbanist-SemiBoldItalic.ttf);
+  font-family: "Urbanist-SemiBoldItalic";
+  src: url(../Assets/Fonts/Urbanist-SemiBoldItalic.ttf);
 }
 
-
-
-
-
-h1{
-    font-family: $urb-400rg;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 81px;
-    line-height: 86px;
-    letter-spacing: -0.025em;
-    color: $white;
-    max-width: 632px;
-    margin-bottom: 25px;
-    @include lg{
-        font-size: 51px;
-        line-height: 61px;
-    }
-    @include md{
-        font-size: 40px;
-        line-height: 55px;
-    }
-    @include sm{
-        margin-bottom: 15px;
-        font-size: 30px;
-        line-height: 40px;
-    }
-    @include xsm{
-        margin-bottom: 10px;
-        font-size: 22px;
-        line-height: 30px;
-    }
-}
-
-h2{
-    font-family: $urb-400rg;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 54px;
-    line-height: 59px;
-    letter-spacing: -0.025em;
-    color: $primery-color;
-}
-
-h3{
-    font-family: $urb-500rg;
-    font-style: normal;
-    font-weight: 500;
+h1 {
+  font-family: $urb-400rg;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 81px;
+  line-height: 86px;
+  letter-spacing: -0.025em;
+  color: $white;
+  max-width: 632px;
+  margin-bottom: 25px;
+  @include lg {
+    font-size: 51px;
+    line-height: 61px;
+  }
+  @include md {
+    font-size: 40px;
+    line-height: 55px;
+  }
+  @include sm {
+    margin-bottom: 15px;
     font-size: 30px;
     line-height: 40px;
-    color: $white;
-    @include md{
-        font-size: 22px;
-        line-height: 30px;
-    }
+  }
+  @include xsm {
+    margin-bottom: 10px;
+    font-size: 22px;
+    line-height: 30px;
+  }
 }
-h4{
-    font-family: $urb-500rg;
-    font-size: 24px;
-    line-height: 34px;
-    color: $white;
-    margin-bottom: 15px;
-    @include md{
-        font-size: 20px;
-        line-height: 26px;
-        margin-bottom: 10px;
-    }
+
+h2 {
+  font-family: $urb-400rg;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 54px;
+  line-height: 59px;
+  letter-spacing: -0.025em;
+  color: $primary-color;
 }
-h6{
-    font-family: $urb-400rg;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
+
+h3 {
+  font-family: $urb-500rg;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 40px;
+  color: $white;
+  @include md {
+    font-size: 22px;
+    line-height: 30px;
+  }
+}
+h4 {
+  font-family: $urb-500rg;
+  font-size: 24px;
+  line-height: 34px;
+  color: $white;
+  margin-bottom: 15px;
+  @include md {
+    font-size: 20px;
     line-height: 26px;
-    color: $white;
-    @include sm{
-        font-size: 14px;
-        line-height: 20px;
-    }
+    margin-bottom: 10px;
+  }
 }
+h6 {
+  font-family: $urb-400rg;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: $white;
+  @include sm {
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+
+
+body.newClass header.header {
+  background: rgba(0, 0, 0, 0.4901960784);
+  z-index: 10;
+  transition: all 0.4s;
+  animation: 0.3s ease-out 0s 1 normal forwards running stickyEffect;
+
+  @keyframes stickyEffect {
+    0%{
+      transform: translateY(-100%);
+    }
+    100%{
+      transform: translateY(0);
+    }
+  }
+}
+body.newClass header.header .btns .btn{
+  color: $white;
+  border-color: $white;
+}
+
+
