--- a/src/Style/Variable.scss
+++ b/src/Style/Variable.scss
@@ -1,23 +1,58 @@
-$urb-400rg : 'Urbanist-Regular';
-$urb-500rg : 'Urbanist-Medium';
-$urb-500it: 'Urbanist-MediumItalic';
-$urb-600rg: 'Urbanist-SemiBold';
-$urb-600it: 'Urbanist-SemiBoldItalic';
+$urb-400rg: "Urbanist-Regular";
+$urb-500rg: "Urbanist-Medium";
+$urb-500it: "Urbanist-MediumItalic";
+$urb-600rg: "Urbanist-SemiBold";
+$urb-600it: "Urbanist-SemiBoldItalic";
 
-$primery-color: #000000;
-$secondary-color: #8BF7EF;
-$bg-first : #EFEADF;
-$white : #FFFFFF;
+$primary-color: #000000;
+$secondary-color: #8bf7ef;
+$white-100:#efeadf ;
+$white: #ffffff;
+$white_150: #e5e5e5;
+$border-first: #486fff;
+$text_logo: #848484;
 
-$border-first: #486FFF;
-
-$breakpoints:( 'xxsm':480px,'xsm':576px, 'sm': 768px, 'md': 992px, 'xmd': 1024px, 'lg': 1200px,'xlg': 1320px,);
-    @mixin xxsm{@media (max-width: map-get($breakpoints, 'xxsm')) {@content;}}
-    @mixin xsm{@media (max-width: map-get($breakpoints, 'xsm')) {@content;}}
-    @mixin sm{@media (max-width: map-get($breakpoints, 'sm')) {@content;}}
-    @mixin md {@media (max-width: map-get($breakpoints, 'md')) {@content;}}
-    @mixin xmd {@media (max-width: map-get($breakpoints, 'xmd')) {@content;}}
-    @mixin lg {@media (max-width: map-get($breakpoints, 'lg')) {@content;}}
-    @mixin xlg {@media (max-width: map-get($breakpoints, 'xlg')) {@content;}}
-   
-   
+$breakpoints: (
+  "xxsm": 480px,
+  "xsm": 576px,
+  "sm": 768px,
+  "md": 992px,
+  "xmd": 1024px,
+  "lg": 1200px,
+  "xlg": 1320px,
+);
+@mixin xxsm {
+  @media (max-width: map-get($breakpoints, "xxsm")) {
+    @content;
+  }
+}
+@mixin xsm {
+  @media (max-width: map-get($breakpoints, "xsm")) {
+    @content;
+  }
+}
+@mixin sm {
+  @media (max-width: map-get($breakpoints, "sm")) {
+    @content;
+  }
+}
+@mixin md {
+  @media (max-width: map-get($breakpoints, "md")) {
+    @content;
+  }
+}
+@mixin xmd {
+  @media (max-width: map-get($breakpoints, "xmd")) {
+    @content;
+  }
+}
+@mixin lg {
+  @media (max-width: map-get($breakpoints, "lg")) {
+    @content;
+  }
+}
+@mixin xlg {
+  @media (max-width: map-get($breakpoints, "xlg")) {
+    @content;
+  }
+}
