--- a/src/Component/ Look_card/Look_card.scss
+++ b/src/Component/ Look_card/Look_card.scss
@@ -17,20 +17,19 @@
         }
         .card_images{
             height: 100%;
+            max-width: 84px;
+            @include sm{
+                max-width: 50px;
+            }
+            @include xsm{
+                max-width: 40px;
+            }
             .lc_icon{
                 display: block;
                 width: 100%;
                 height: 100%;
                 overflow: hidden;
                 object-fit: cover;
-                max-width: 84px;
-                @include xsm{
-                    max-width: 60px;
-                    width: 100%;
-                }
-                @include xxsm{
-                    max-width: 50px;
-                }
             }
         }
         .card_content{
