--- a/src/Component/Why_sell/Why_sell.scss
+++ b/src/Component/Why_sell/Why_sell.scss
@@ -16,31 +16,6 @@
       @include md{
         width: 200px;
       }
-      // &::after{
-      //   content: '';
-      //   position: absolute;
-      //   top: 0;
-      //   right: 90px;
-      //   border: 1px solid $border-first;
-      //   height: 360px;
-      //   @include md{
-      //     right: 50px;
-      //   }
-      //   @include sm{
-      //     height: 200px;
-      //   }
-      // }
-      // &::before{
-      //   content: '';
-      //   position: absolute;
-      //   top: 360px;
-      //   left: 0;
-      //   right: 0;
-      //   border: 1px solid $border-first;
-      //   @include sm{
-      //     top: 200px;
-      //   }
-      // }
       .darkfirst_box{
         width: 100%;
         height: 100%;
@@ -50,7 +25,7 @@
         &::after{
           content: '';
           position: absolute;
-          border: 1px dashed $border-first;
+          border: 1px solid $border-first;
           right: 90px;
           top: 0;
           bottom: 0;
@@ -65,11 +40,11 @@
         background-color: aliceblue;
         overflow: hidden;
         .circleborder{
-          width: 540px;
+          width: 360px;
           height: 540px;
           border-top-left-radius: 540px 540px;
           border: 0.5px dashed #486FFF;
-         
+         transform: translate(1px, 1px);
         }
       }
     }
